@@ -13,13 +13,10 @@
 package org.openhab.automation.jrule.items;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.openhab.automation.jrule.internal.items.JRuleInternalPlayerGroupItem;
-import org.openhab.automation.jrule.items.metadata.JRuleItemMetadata;
 import org.openhab.automation.jrule.rules.value.JRulePlayPauseValue;
 
 /**
@@ -30,15 +27,13 @@ import org.openhab.automation.jrule.rules.value.JRulePlayPauseValue;
 class JRulePlayerGroupItemTest extends JRulePlayerItemTest {
     @Override
     protected JRuleItem getJRuleItem() {
-        return new JRuleInternalPlayerGroupItem(GROUP_NAME, "Label", "Type", "Id",
-                Map.of("Speech", new JRuleItemMetadata("SetLightState", Map.of("location", "Livingroom"))),
-                List.of("Lighting", "Inside"));
+        return new JRuleInternalPlayerGroupItem(GROUP_NAME, "Label", "Type", "Id", mock, List.of("Lighting", "Inside"));
     }
 
     @Test
     public void testMemberOfGeneric() {
         List<JRulePlayPauseValue> set = JRulePlayerGroupItem.forName(GROUP_NAME).memberItems().stream()
-                .map(JRulePlayerItem::getStateAsPlayPause).collect(Collectors.toList());
+                .map(JRulePlayerItem::getStateAsPlayPause).toList();
         Assertions.assertEquals(3, set.size());
     }
 }
